syntax = "proto3";

package main;
option go_package = "./;main";

message Proof {
    bytes buf = 1;    
}

message Timestamp {
    string now = 1;    
}

message Identity {
    string ID = 1;
    string ENR = 2;     
}

message Approval {
    repeated bytes signature = 1; 
}

message Peers {
    string url = 1;
    repeated string subDomain = 2;
    optional Approval approval = 3;
}

message Inference {
    string mode = 1;
}

message OrderRequest {
    Proof proof = 1;
    Timestamp timestamp = 2;
    Identity identity = 3;
    Inference inference = 4;
    Peers peers = 5;
}